# RUBEM

./: .coveragerc  .docstr.yaml  .gitignore  .readthedocs.yaml  CITATION  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  COPYING.md  LICENSE  LICENSE.md  README.md  RUBEM.pyproj  RUBEM.sln  RainfallRunoff.py  __init__.py  appsettings.Development.json  appsettings.Docker.json  appsettings.json  env-ci.yml  env-dev.yml  env-prod.yml  evapotranspiration.py  interception.py  metadata.yml  pyproject.toml  pytest.ini  rubem.py  rubem.spec  soil.py  surface_runoff.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml  build-test-conda.yml  build-test-micromamba.yml  codecov-conda.yml  codeql-analysis.yml  greetings.yml  python-package-conda.yml  stale.yml
PluginBase/: 01 compile ui.bat  Base.py  BaseDialog.py  __init__.py  metadata.txt
PluginBase/config/: config.ini
PluginBase/ui.resources/: resources.qrc  ui_BaseDialog.ui
Preprocessing/: MinMax_Raster_V2.py  PCR_Krig.py  Rains.csv  conda_env.yml  dem.map  kriging.py  minMax.py  pcrTss2tif-vpy38.py  pcrTss2tif.py  tif2map.py  tif2pcrTss.py
doc/: requirements.txt
doc/source/: api.rst  changelog.rst  code-of-conduct.rst  (+13 more)
modules/: __init__.py  evapotranspiration.py  interception.py  soil.py  surface_runoff.py
rubem/: __init__.py  __main__.py  __version__.py  _dynamic_model.py  cli.py  core.py  launcher.py
tests/: utils.py
utilities/: __init__.py  date_calc.py  file_convertions.py  file_generators.py
(+217 files in other folders)
