[tool.poetry]
name = "rubem"
version = "0.1.0"
description = "Rainfall rUnoff Balance Enhanced Model (RUBEM) is a distributed hydrological model to calculate monthly flows with changes in land use over time"
authors = ["LabSid PHA EPUSP <rubem.hydrological@labsid.eng.br>"]
license = "GPL v3"
readme = "README.md"
homepage = "http://labsid.eng.br/software.aspx?id=17"
repository = "https://github.com/LabSid-USP/RUBEM"
documentation = "https://rubem.readthedocs.io/en/latest"
keywords = ["remote sensing", "hydrology", "water", "hydrological model"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/LabSid-USP/RUBEM/issues"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
